# touka

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README  README.md  TODO  build.zig  configure  gojo.py  hello.json  hello.rnh  output.c  sum2.json  sum2.rnha  test-tool.sh  test.json  testing.json  testing.rinha
s2/: 03-print_sub.rinha  05-print_rem.rinha  08-print_neIntInt.rinha  09-print_eqStrStr.rinha  10-print_neStrStr.rinha  11-print_neBoolBool.rinha  12-print_eqBoolBool.rinha  4-print_div.rinha  6-print_mul.rinha  7-print_eqIntInt.rinha
scripts/: buildtcc
src/: ast.rs  ast.zig  gen.rs  main.rs  main.zig  mem.zig  parser.rs  reader.zig  spec.zig  tests.zig  yamero.c
src/doppelganger/: crt1.h  engine.zig  generator.zig  inventory.zig  runtime.zig  touka.h  types.zig  uv.zig
